# gnome-app-list

./: .gitlab-ci.yml  NEWS  README.md  gnome-app-list.doap  meson.build  org.gnome.Apps.Curated.xml  org.gnome.Apps.Featured.xml
data/: flathub-apps.txt  gnome-apps.txt
scripts/: update_apps.py
